syntax = "proto3";

package user;

service Authenticate {
    rpc AuthenticateUser (AuthRequest) returns (AuthReply) {};
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthReply {
  bool isAuthenticated = 1;
}
